force-app/main/default/objects/WorkHistory__c/WorkHistory__c.object-meta.xml
<CustomObject>
    <label>Work History</label>
    <nameField>
        <label>Work History</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>