force-app/main/default/objects/WorkHistory__c/fields/ApproximateEndDate__c.field-meta.xml
<CustomField>
    <fullName>ApproximateEndDate__c</fullName>
    <label>Approximate End Date</label>
    <type>Date</type>
</CustomField>