force-app/main/default/objects/WorkHistory__c/fields/ApproximateStartDate__c.field-meta.xml
<CustomField>
    <fullName>ApproximateStartDate__c</fullName>
    <label>Approximate Start Date</label>
    <type>Date</type>
</CustomField>