force-app/main/default/objects/WorkHistory__c/fields/CaseRecord__c.field-meta.xml
<CustomField>
    <fullName>CaseRecord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Record</label>
    <referenceTo>Case_Record__c</referenceTo>
    <relationshipLabel>Work Histories</relationshipLabel>
    <relationshipName>Work_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>