force-app/main/default/objects/WorkHistory__c/fields/EmployerCity__c.field-meta.xml
<CustomField>
    <fullName>EmployerCity__c</fullName>
    <label>Employer City</label>
    <type>TextArea</type>
</CustomField>