force-app/main/default/objects/WorkHistory__c/fields/EmployerName__c.field-meta.xml
<CustomField>
    <fullName>EmployerName__c</fullName>
    <label>Employer Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>