force-app/main/default/objects/WorkHistory__c/fields/HourlyWage__c.field-meta.xml
<CustomField>
    <fullName>HourlyWage__c</fullName>
    <inlineHelpText>Hourly Wage</inlineHelpText>
    <label>Hourly Wage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>