force-app/main/default/objects/WorkHistory__c/fields/HoursPerWeek__c.field-meta.xml
<CustomField>
    <fullName>HoursPerWeek__c</fullName>
    <label>Hours Per Week</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>