force-app/main/default/objects/WorkHistory__c/fields/JobDuties__c.field-meta.xml
<CustomField>
    <fullName>JobDuties__c</fullName>
    <label>Job Duties</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>