force-app/main/default/objects/WorkHistory__c/fields/Resume_Profile__c.field-meta.xml
<CustomField>
    <fullName>Resume_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resume Profile</label>
    <referenceTo>Resume_Profile__c</referenceTo>
    <relationshipLabel>Work Histories</relationshipLabel>
    <relationshipName>Work_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>